<resources>
    <string name="app_name">Multimedia</string>
    <string name="str_disk_list">Disk list</string>
    <string name="str_picture_title">Picture</string>
    <string name="str_music_title">Music</string>
    <string name="str_video_title">Video</string>
    <string name="str_disk_last_memory">Residual space:</string>
    <string name="str_video_list_count">Total %d videos</string>
    <string name="str_music_list_count">Total %d musics</string>
    <string name="str_picture_list_count">Total %d pictures</string>
    <string name="str_file_list_count">Total %d objects</string>
    <string name="str_empty_no_data">No data available！</string>
    <string name="str_universal_storage_internal">Internal storage</string>
    <string name="str_universal_storage_default">Removable disk</string>
    <!--keyboard-->
    <string name="str_keyboard_num_0">0</string>
    <string name="str_keyboard_num_1">1</string>
    <string name="str_keyboard_num_2">2</string>
    <string name="str_keyboard_num_3">3</string>
    <string name="str_keyboard_num_4">4</string>
    <string name="str_keyboard_num_5">5</string>
    <string name="str_keyboard_num_6">6</string>
    <string name="str_keyboard_num_7">7</string>
    <string name="str_keyboard_num_8">8</string>
    <string name="str_keyboard_num_9">9</string>
    <string name="str_keyboard_num_abc">ABC</string>
    <string name="str_keyboard_num_def">DEF</string>
    <string name="str_keyboard_num_ghi">GHI</string>
    <string name="str_keyboard_num_jkl">JKL</string>
    <string name="str_keyboard_num_mno">MNO</string>
    <string name="str_keyboard_num_pqrs">PQRS</string>
    <string name="str_keyboard_num_tuv">TUV</string>
    <string name="str_keyboard_num_wzyx">WZYX</string>
    <string name="str_keyboard_t9">T9 keyboard</string>
    <string name="str_keyboard_system">System keyboard</string>
    <string name="play_setting_0_value_2">OFF</string>
    <string name="str_menu_title">Setting</string>
    <!--music start-->
    <string name="file_duration">Duration of song:</string>
    <string name="music_default_time">00:00:00</string>
    <string name="Artist_name">Singer name:</string>
    <string name="file_path">File path:</string>
    <string name="none_lyrics_find">Failure to find lyrics</string>
    <string name="unknown">Unknown</string>
    <string name="singer">Singer:</string>
    <string name="album_text">Album:</string>
    <string name="exit_music_play">Sure to exit music playback?</string>
    <string name="alert">Reminder</string>
    <string name="music_media_play_next">Go on playing the next music?</string>
    <string name="video_media_other_error_unknown">Other unknown error</string>
    <string name="video_media_error_not_valid">It is no a valid, continuous video sequence</string>
    <string name="video_media_error_server_died">Stuck at client of media player</string>
    <string name="video_media_error_unknown">Unknown error</string>
    <string name="video_media_error_malformed">Other abnormal error</string>
    <string name="video_media_error_io">IO read/write error</string>
    <string name="video_media_error_unsupported">Unsupported error</string>
    <string name="video_media_error_format_unsupport">Unsupported format</string>
    <string name="video_media_error_not_connected">Data connection error</string>
    <string name="video_media_error_audio_unsupport">Unsupported audio format</string>
    <string name="video_media_error_video_unsupport">Unsupported video format</string>
    <string name="video_media_error_no_license">No permission is granted to the data played.</string>
    <string name="video_media_error_license_expired">Authorized permission expires</string>
    <string name="video_size_unknown">unknown</string>
    <string name="video_subtitle_close">close</string>
    <string name="video_subtitle_inner_title">subtitle</string>
    <string name="video_subtitle_inner">inner</string>
    <string name="video_subtitle_external">external</string>
    <string name="disk_eject">Disk removed</string>
    <string name="show_info">Playback error</string>
    <string name="exit_ok">OK</string>
    <string name="exit_cancel">Cancel</string>
    <string name="exit_title">Warning</string>
    <string name="exit_confirm">Sure to remove this program from the program list?</string>
    <string name="current_time">Current time:</string>
    <string name="total_duration">Total duration:</string>
    <string name="choice">Select</string>
    <string name="confirm">OK</string>
    <string name="music_info_name">Name:</string>
    <string name="music_info_duration">Duration:</string>
    <string name="music_info_artist">Singer:</string>
    <string name="music_info_format">Format:</string>
    <string name="music_info_codec">Audio:</string>
    <!--Image start-->
    <string name="file_name">File name:</string>
    <string name="photo_info">Picture information</string>
    <string name="file_create_time">Time of creation:</string>
    <string name="file_size">File size:</string>
    <string name="file_format">File format:</string>
    <string name="display_img_name">Picture names displayed</string>
    <string name="photo_3D_toast">This operation is impermissible under 3D mode</string>
    <string name="photo_set_wallpaper">Wallpaper settings</string>
    <string name="first_photo">This is the first picture!</string>
    <string name="last_photo">This is the last picture!</string>
    <string name="can_not_decode">The picture is too large to be parsed!</string>
    <string name="can_not_decode_previous">Previous picture is too large to be parsed!</string>
    <string name="can_not_decode_next">Next picture is too large to be parsed!</string>
    <string name="current_pic">Current picture:</string>
    <string name="picture_can_not_decode">This picture cannot be parsed!</string>
    <string name="picture_decoding">Picture is being parsed...</string>
    <string name="picture_decode_failed">Picture parsing error!</string>
    <string name="picture_can_not_set3d">Not 3D pictures!</string>
    <string name="picture_playing_time">Interval time for slide playing</string>
    <string name="picture_animation_setting">Animation effect</string>
    <string name="photo_GIF_toast">This operation is impermissible under GIF animation mode</string>
    <string name="photo_out_of_memory_toast">Insufficient memory!</string>
    <string name="photo_scale_or_rotate_toast">No 3D mode is set under zoom/rotate modes</string>
    <string name="photo_pan_success_toast">Successful picture panning</string>
    <string name="photo_pan_failed_toast">Failure of picture panning!</string>
    <string name="photo_pan_parameter_invalid">Invalid picture panning parameters!</string>
    <string name="not_supported_3D_this_platform">This platform doesn’t support 3D</string>
    <string name="photo_media_play_next">Go on playing the next picture?</string>
    <string name="file_not_support">Unsupported format</string>
    <string name="photo_not_support_scale">Too small memory to zoom at this platform!</string>
    <string name="photo_zooming">Picture is being zoomed...</string>
    <string name="photo_rotating">Picture is rotating...</string>
    <string name="max_tip">Reach maximum zoom scaling!</string>
    <string name="min_tip">Reach minimum zoom scaling!</string>
    <string name="busy_tip">Being processed, please retry later!</string>
    <string name="picture_info_name">Name:</string>
    <string name="picture_info_time">Time:</string>
    <string name="picture_info_size">Size:</string>
    <string name="picture_info_format">Format:</string>
    <!--Video start-->
    <string name="video_sub_no_support_fullscreen_in_4K2K">Video sub do not support fullscreen in 4K2K!</string>
    <string name="video_display_previous_video_last_frame">Because the video only has audio, it displays the last frame of previous video in video seamless playback!!</string>
    <string name="video_no_support_two_4k">Not support simultaneous playing of two 4k videos.</string>
    <string name="buffering">This video is being buffered, please wait...</string>
    <string name="video_iso_tip">Unsupported ISO files</string>
    <string name="choose_time_failed">This video fails to be accurately positioned!</string>
    <string name="video_media_play_next">Go on playing the next video?</string>
    <string name="video_media_info_video_decoder_over_capability">not support 4k2k in pip mode</string>
    <string name="video_media_infor_no_index">Unable to fast backward or position the beginning due to no video index</string>
    <string name="video_breakpoint_play">Sure to play from where stops last time?</string>
    <string name="open_file_fail">Unable to open this file! </string>
    <string name="video_info_name">File name:</string>
    <string name="video_info_duration">Duration:</string>
    <string name="video_info_size">Size:</string>
    <string name="video_info_format">Format:</string>
    <string name="video_info_audio_codec">Audio:</string>
    <string name="video_info_video_codec">Video:</string>
    <string name="str_hdr_10" translatable="false">HDR-10</string>
	<string name="file_is_decoding">The photo is decoding,please try again later...</string>
    <string name="scan_finish">Data scan completed.</string>
    <string name="str_video_info">Video information</string>
    <string name="str_picture_ratio">Picture ratio</string>
    <string name="str_picture_mode">Picture mode</string>
    <string name="str_sound_mode">Sound mode</string>
    <string name="str_advanced_setting">Advanced settings</string>
    <string name="str_audio_track">Audio track</string>
    <string name="str_subtitle">Subtitle</string>
    <string name="str_loop_mode">Loop mode</string>
    <string name="str_standard">Standard</string>
    <string name="str_soft">Soft</string>
    <string name="str_user">User</string>
    <string name="str_bright">Bright</string>
    <string name="str_music">Music</string>
    <string name="str_film">Movie</string>
    <string name="str_list_play">List play</string>
    <string name="str_shuffle_play">Shuffle playback</string>
    <string name="str_single">Single</string>
    <string name="str_list_repeat">List repeat</string>
    <string name="str_music_info">Music information</string>
    <string name="str_picture_info">Picture information</string>
    <string name="str_interval_time">Interval time for slide playing</string>
    <string name="str_three_second">3S</string>
    <string name="str_five_second">5S</string>
    <string name="str_ten_second">10S</string>
    <string name="str_fifteen_second">15S</string>
    <string name="str_thirty_second">30S</string>
</resources>
